<resources>
    <string name="home_title">Главный экран</string>
    <string name="home_greeting">Привет!</string>
    <string name="home_sort">Сортировка</string>
    <string name="home_search_stub">Поиск</string>
    <string name="home_filter_stub">Фильтр</string>
    <string name="home_details">Подробнее</string>
    <string name="home_retry">Повторить</string>
    <string name="home_favorite">Избранное</string>
    <string name="home_error_default">Не удалось загрузить курсы</string>
    <string name="home_empty_default">Курсы не найдены</string>
    <string name="home_bottom_nav_main">Главная</string>
    <string name="home_bottom_nav_favorites">Избранное</string>
    <string name="home_bottom_nav_account">Аккаунт</string>
    <string name="home_course_cover">Обложка курса</string>
</resources>
